# SS2026_RTS_HWSW_Papers

./: .gitignore  README.md
HLS_with_SAS_sim/: CMakeLists.txt  Doxyfile  HLS_with_SAS_sim  README.md  config.json  example.dfg  main.cpp  output_data_readme.md  sa_details.md  visualize.py
HLS_with_SAS_sim/results_10/: best_gantt.csv  run_10_convergence.csv  run_10_temp_stats.csv  run_1_convergence.csv  run_1_temp_stats.csv  run_2_temp_stats.csv  run_3_temp_stats.csv  run_5_temp_stats.csv  run_6_convergence.csv  run_6_temp_stats.csv  run_7_temp_stats.csv  run_8_convergence.csv  run_9_temp_stats.csv  run_summary.csv
HLS_with_SAS_sim/results_11/: run_2_convergence.csv  run_3_convergence.csv  run_4_convergence.csv  run_4_temp_stats.csv  run_5_convergence.csv  run_7_convergence.csv  run_8_temp_stats.csv  run_9_convergence.csv  run_summary.csv
HLS_with_SAS_sim/results_12/: best_gantt.csv  run_10_convergence.csv  run_10_temp_stats.csv  run_1_convergence.csv  run_1_temp_stats.csv  run_2_convergence.csv  run_2_temp_stats.csv  run_3_convergence.csv  run_3_temp_stats.csv  run_4_convergence.csv  run_4_temp_stats.csv  run_5_convergence.csv  run_5_temp_stats.csv  run_6_convergence.csv  run_6_temp_stats.csv  run_7_convergence.csv  run_7_temp_stats.csv  run_8_convergence.csv  run_8_temp_stats.csv  run_9_convergence.csv  run_9_temp_stats.csv  run_summary.csv
HLS_with_SAS_sim/results_2/: best_gantt.csv  run_10_convergence.csv  run_10_temp_stats.csv  run_1_convergence.csv  run_1_temp_stats.csv  run_2_convergence.csv  run_2_temp_stats.csv  run_3_convergence.csv  run_3_temp_stats.csv  (+13 more)
(+158 files in other folders)
